fixed: result descriptors were not handled in the cache